client/src/components/Header/style.css
.header {
  background-color: var(--color-theme);
  box-shadow: 0 .175rem .2rem rgba(0, 0, 0, .5);
  padding: var(--spacing-x8) 0;
  position: sticky;
  top: 0;
  z-index: 1;
}

.header__container {
  align-items: center;
  display: flex;
  margin: 0 auto;
  max-width: var(--content-max-width);
}

.header__link {
  --padding: 1rem;
  color: var(--color-gray);
  font-weight: 900;
  text-decoration: none;
}

.header__link:first-child {
  padding: .5rem var(--padding);
  padding-right: 0;
}

.header__link:last-child {
  padding: .5rem var(--padding);
  padding-left: 0;
}

.header__link--active {
  color: var(--color-white);
}

.header__title {
  color: var(--color-white);
  flex-grow: 1;
  margin: 0;
  text-align: center;
}

